# TheBowlingGameKata

./: CMakeLists.txt  README.md
src/: game.cpp  game.h  main.cpp
tests/: CMakeLists.txt  test.cpp
